[tool.poetry]
name = "price-of-chair_web"
version = "0.1.0"
description = ""
authors = ["Franziska Kowalke <franziskakowalke@yahoo.de>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
